--- a/Request/logon.html
+++ b/Request/logon.html
@@ -30,6 +30,10 @@
          <div class="login-box">
              <h1>Login</h1>
              <div class="textbox">
+                <input type="text" placeholder="Location" name="" id="">
+
+             </div>
+             <div class="textbox">
                 <input type="text" placeholder="Username" name="" id="">
 
              </div>
