--- a/Request/stock_home.html
+++ b/Request/stock_home.html
@@ -36,7 +36,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Cards Request</h5>
                           <p class="card-text">Make all card requests here.</p>
-                          <a href="#" class="btn btn-dark">Click to request</a>
+                          <a href="C:\Users\ADEGOKE ABOLAJI\Desktop\TECH ACADEMY\STERLINGSTOCKTRACKER\Request\card_token.html" class="btn btn-dark">Click to request</a>
                         </div>
                       </div> </div>
                    
@@ -45,7 +45,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Tokens Request</h5>
                           <p class="card-text">Make all token requests here.</p>
-                          <a href="#" class="btn btn-dark">Click to request</a>
+                          <a href="C:\Users\ADEGOKE ABOLAJI\Desktop\TECH ACADEMY\STERLINGSTOCKTRACKER\Request\card_token2.html" class="btn btn-dark">Click to request</a>
                         </div>
                       </div></div>                
                    
@@ -55,7 +55,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Stock Portfolio</h5>
                           <p class="card-text">This is an overview of your branch's current stock position and value</p>
-                          <a href="#" class="btn btn-dark">Click to view</a>
+                          <a href="C:\Users\ADEGOKE ABOLAJI\Desktop\TECH ACADEMY\STERLINGSTOCKTRACKER\Request\stock_portfolio_cemp.html" class="btn btn-dark">Click to view</a>
                         </div>
                       </div></div>
                 </div>
