--- a/Approval/approval_pending.html
+++ b/Approval/approval_pending.html
@@ -37,7 +37,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Pending Cards Request</h5>
                           <p class="card-text">Approve all card requests here.</p>
-                          <a href="C:\Users\ADEGOKE ABOLAJI\Desktop\TECH ACADEMY\STERLINGSTOCKTRACKER\Approval\approval_card.html" class="btn btn-dark">Click to approve</a>
+                          <a href="./approval_card.html" class="btn btn-dark">Click to approve</a>
                         </div>
                       </div> </div>
                    
@@ -46,7 +46,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Pending Tokens Request</h5>
                           <p class="card-text">Approve all token requests here.</p>
-                          <a href="C:\Users\ADEGOKE ABOLAJI\Desktop\TECH ACADEMY\STERLINGSTOCKTRACKER\Approval\approval_token.html" class="btn btn-dark">Click to approve</a>
+                          <a href="./approval_token.html" class="btn btn-dark">Click to approve</a>
                         </div>
                       </div></div>                
                    
@@ -56,7 +56,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Stock Portfolio</h5>
                           <p class="card-text">Overview of your stock position</p>
-                          <a href="C:\Users\ADEGOKE ABOLAJI\Desktop\TECH ACADEMY\STERLINGSTOCKTRACKER\Request\stock_portfolio_cemp.html" class="btn btn-dark">Click to view</a>
+                          <a href="../Request/stock_portfolio_cemp.html" class="btn btn-dark">Click to view</a>
                         </div>
                       </div></div>
                       <div class="col-sm-3"><div class="card" style="width: 18rem;">
@@ -64,7 +64,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Branch Income</h5>
                           <p class="card-text">Review Branch Income on Stocks</p>
-                          <a href="C:\Users\ADEGOKE ABOLAJI\Desktop\TECH ACADEMY\STERLINGSTOCKTRACKER\Approval\stock_income.html" class="btn btn-dark">Click to view</a>
+                          <a href="./stock_income.html" class="btn btn-dark">Click to view</a>
                         </div>
                       </div></div>
 
