--- a/Request/card_token.html
+++ b/Request/card_token.html
@@ -68,7 +68,7 @@
 
             <div class="card-request">
                 <form class="form-inline">
-                    <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Master Cards</label>
+                    <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Master Card</label>
                     <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
                       <option selected>Choose...</option>
                       <option value="1">One</option>
