--- a/Request/logon.html
+++ b/Request/logon.html
@@ -41,7 +41,7 @@
              <div class="textbox">
                 <input type="text" placeholder="Password" name="" id="">
              </div>
-             <a href="C:\Users\ADEGOKE ABOLAJI\Desktop\TECH ACADEMY\STERLINGSTOCKTRACKER\Request\stock_home.html">Sign in</a>
+            <button> <a href="stock_home.html">Sign in</a></button>
              
          </div>
 
