--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-8"> <a href="">Stock tracker</a></div>
-                    <div class="col-sm-3"> <a href="file:///C:/Users/ADEGOKE%20ABOLAJI/Desktop/TECH%20ACADEMY/STERLINGSTOCKTRACKER/Request/logon.html"> <button>Log on</button> </a></div>
+                    <div class="col-sm-3"> <a href="./Request/logon.html"> <button>Log on</button> </a></div>
 
                 </div>
             </div>
@@ -24,10 +24,6 @@
             <div class="top-leftimage">
                 <div class="imageone"><img src="images/download.png" alt=""> </div>
             </div>
-            
-
-
-      
 
             <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
