--- a/Request/stock_home.html
+++ b/Request/stock_home.html
@@ -14,8 +14,9 @@
         <div class="menu-bar">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-8"> <a href="">Stock tracker</a></div>
-                    <div class="col-sm-2"> <h6>Ogudu Branch</h6></div>
+                    <div class="col-sm-6"> <a href="">Stock tracker</a></div>
+                    <div class="col-sm-2"> <h6>CEMP</h6></div>
+                      <div class="col-sm-2"> <h6>Ogudu Branch</h6></div>
                     <div class="col-sm-2"> <h6>NG002049</h6></div>
                 </div>
             </div>
@@ -36,7 +37,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Cards Request</h5>
                           <p class="card-text">Make all card requests here.</p>
-                          <a href="C:\Users\ADEGOKE ABOLAJI\Desktop\TECH ACADEMY\STERLINGSTOCKTRACKER\Request\card_token.html" class="btn btn-dark">Click to request</a>
+                          <a href="./card_token.html" class="btn btn-dark">Click to request</a>
                         </div>
                       </div> </div>
                    
@@ -45,7 +46,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Tokens Request</h5>
                           <p class="card-text">Make all token requests here.</p>
-                          <a href="C:\Users\ADEGOKE ABOLAJI\Desktop\TECH ACADEMY\STERLINGSTOCKTRACKER\Request\card_token2.html" class="btn btn-dark">Click to request</a>
+                          <a href="./card_token2.html" class="btn btn-dark">Click to request</a>
                         </div>
                       </div></div>                
                    
@@ -55,7 +56,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Stock Portfolio</h5>
                           <p class="card-text">This is an overview of your branch's current stock position and value</p>
-                          <a href="C:\Users\ADEGOKE ABOLAJI\Desktop\TECH ACADEMY\STERLINGSTOCKTRACKER\Request\stock_portfolio_cemp.html" class="btn btn-dark">Click to view</a>
+                          <a href="./stock_portfolio_cemp.html" class="btn btn-dark">Click to view</a>
                         </div>
                       </div></div>
                 </div>
