--- a/Approval/approval_logon.html
+++ b/Approval/approval_logon.html
@@ -41,7 +41,7 @@
              <div class="textbox">
                 <input type="text" placeholder="Password" name="" id="">
              </div>
-             <a href="./approval_pending.html">Sign in</a>
+             <button><a href="./approval_pending.html">Sign in</a></button>
              
          </div>
 
