--- a/CARD/cardstock_portfolio.html
+++ b/CARD/cardstock_portfolio.html
@@ -21,8 +21,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-8"> <a href="">Stock tracker</a></div>
-                    <div class="col-sm-2"> <h6>Ogudu Branch</h6></div>
-                    <div class="col-sm-2"> <h6>NG002049</h6></div>
+                    <div class="col-sm-2"> <h6>Card Services</h6></div>
+                    <div class="col-sm-2"> <h6></h6></div>
                 </div>
             </div>
         </div>
@@ -33,7 +33,7 @@
 
         <div class="main-div">
             <div class="main-text">
-                <h1 class="stock-text">BRANCH NG20049 STOCK OVERVIEW</h1>
+                <h1 class="stock-text">BRANCH STOCK OVERVIEW</h1>
             </div>
 
             
@@ -41,24 +41,24 @@
                 <thead>
                   <tr>                   
                     <th scope="col">dd/mm/yy</th>
-                    <th scope="col">Ogudu Physical Card Stock(Units)</th>
+                    <th scope="col">Branch Physical Card Stock(Units)</th>
                     <th scope="col">10</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
                     <td>dd/mm/yy</td>
-                    <td>Ogudu System Balance Position (N)</td>
+                    <td>Branch System Balance Position (N)</td>
                     <td>-10000</td>
                   </tr>
                   <tr>
                     <td>dd/mm/yy</td>
-                    <td>Ogudu Physical Token Stock(Units)</td>
+                    <td>Branch Physical Token Stock(Units)</td>
                     <td>2</td>
                   </tr>
                   <tr>
                     <td>dd/mm/yy</td>
-                    <td>Ogudu System Balance Position(N)</td>
+                    <td>Branch System Balance Position(N)</td>
                     <td>-3000</td>
                   </tr>
                 </tbody>
@@ -81,12 +81,6 @@
 
 
     </div>
-
-
-
-
-
-
 
 
 
