--- a/CARD/logon.html
+++ b/CARD/logon.html
@@ -41,7 +41,7 @@
              <div class="textbox">
                 <input type="text" placeholder="Password" name="" id="">
              </div>
-             <a href="./stock_home.html">Sign in</a>
+             <button> <a href="./stock_home.html">Sign in</a></button>
              
          </div>
 
