--- a/CARD/stock_home.html
+++ b/CARD/stock_home.html
@@ -35,7 +35,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Cards Request</h5>
                           <p class="card-text">View card requests here.</p>
-                          <a href="../Approval/approval_card.html" class="btn btn-dark">Click to request</a>
+                          <a href="../card/selectbranch_card.html" class="btn btn-dark">Click to request</a>
                         </div>
                       </div> </div>
                    
@@ -44,7 +44,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Tokens Request</h5>
                           <p class="card-text">View Token requests here.</p>
-                          <a href="../Request/card_token2.html" class="btn btn-dark">Click to request</a>
+                          <a href="../CARD/selectbranh_token.html" class="btn btn-dark">Click to request</a>
                         </div>
                       </div></div>                
                    
@@ -54,7 +54,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Stock Portfolio</h5>
                           <p class="card-text">This is an overview of the global stock portfolio</p>
-                          <a href="../Request/stock_portfolio_cemp.html" class="btn btn-dark">Click to view</a>
+                          <a href="../CARD/cardstock_portfolio.html" class="btn btn-dark">Click to view</a>
                         </div>
                       </div></div>
                 </div>
